fixed everything... uid, alignment, upvotes = clicks

--- a/leaderboard.css
+++ b/leaderboard.css
@@ -86,33 +86,3 @@ body {
   cursor: pointer;
 }
 
-
-.map {
-    position: relative;
-    background-image: url('/soma.png');
-    background-position: -20px -20px;
-    width: 500px;
-    height: 500px;
-}
-
-.map circle.public {
-    fill: #49AFCD;
-}
-
-.map circle.private {
-    fill: #DA4F49;
-}
-
-.map text {
-    text-anchor: middle;
-    fill: white;
-    font-weight: bold;
-}
-
-.map circle.callout {
-    stroke-width: 5px;
-    stroke-dasharray: 9, 5;
-    stroke-opacity: .8;
-    fill: none;
-    stroke: red;
-}
